src/objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Case_Detailed_Reason__c</fullName>
        <label>Case Detailed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Case_Origin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                    <isActive>false</isActive>
                    <label>Fax</label>
                </value>
                <value>
                    <fullName>Web</fullName>
                    <isActive>false</isActive>
                    <label>Web</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Case_Reason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic Invoicing Information</fullName>
                </value>
                <value>
                    <fullName>Portal Access and Assistance</fullName>
                </value>
                <value>
                    <fullName>TW Initiative Activation and Management</fullName>
                </value>
                <value>
                    <fullName>Payroll Order Flows</fullName>
                </value>
                <value>
                    <fullName>Invoicing and Financial Documents</fullName>
                </value>
                <value>
                    <fullName>Service Functionality and Other Information</fullName>
                </value>
                <value>
                    <fullName>SPAM ( self-compliation )</fullName>
                </value>
                <value>
                    <fullName>PLATFORM-CREDENTIALS AND RECORDING</fullName>
                </value>
                <value>
                    <fullName>PLATFORM-FUNCTIONALITY</fullName>
                </value>
                <value>
                    <fullName>PLATFORM-FAILURE IN OPERATION</fullName>
                </value>
                <value>
                    <fullName>UPDATE OF THE REGISTER</fullName>
                </value>
                <value>
                    <fullName>SICKNESS FUND-MARSH</fullName>
                </value>
                <value>
                    <fullName>PRACTICAL VERIFICATION</fullName>
                </value>
                <value>
                    <fullName>CASH WELFARE</fullName>
                </value>
                <value>
                    <fullName>NOT OF COMPETENCE</fullName>
                </value>
                <value>
                    <fullName>INCORRECT INVOICING</fullName>
                </value>
                <value>
                    <fullName>INVOICES PAYMENT INFO</fullName>
                </value>
                <value>
                    <fullName>INCONSISTENT / REPORT-DATA STREAMS</fullName>
                </value>
                <value>
                    <fullName>FLOWS / REPORT-NO RECEPTION</fullName>
                </value>
                <value>
                    <fullName>PAYMENT METHOD</fullName>
                </value>
                <value>
                    <fullName>CHANGE ECONOMIC/CONTRACTUAL CONDITIONS</fullName>
                </value>
                <value>
                    <fullName>PATH LOADING RESULT</fullName>
                </value>
                <value>
                    <fullName>CATALOGUED LAUNCH RESULT</fullName>
                </value>
                <value>
                    <fullName>CHANGES TO THE PLAN</fullName>
                </value>
                <value>
                    <fullName>INSURANCE</fullName>
                </value>
                <value>
                    <fullName>PROSPECT</fullName>
                </value>
                <value>
                    <fullName>COMPLAINT</fullName>
                </value>
                <value>
                    <fullName>INFO REGULATION</fullName>
                </value>
                <value>
                    <fullName>INFO REFUNDS</fullName>
                </value>
                <value>
                    <fullName>TICKET COMPLIMENTS-DELIVERY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Closing_Milestone_Minute__c</fullName>
        <label>Closing Milestone Minute</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Entitlement_Name_Number__c</fullName>
        <displayFormat>SLA{000}</displayFormat>
        <label>Entitlement Name Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IT_Financial_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Center</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_IVR_level_1__c</fullName>
        <label>IVR level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_IVR_level_2__c</fullName>
        <label>IVR level 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ticket Welfare Platform</fullName>
                </value>
                <value>
                    <fullName>Flexbenefit Platform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_IVR_level_3__c</fullName>
        <label>IVR level 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic Invoicing Information</fullName>
                </value>
                <value>
                    <fullName>Portal Access and Assistance</fullName>
                </value>
                <value>
                    <fullName>TW Initiative Activation and Management</fullName>
                </value>
                <value>
                    <fullName>Payroll Order Flows</fullName>
                </value>
                <value>
                    <fullName>Invoicing and Financial Documents</fullName>
                </value>
                <value>
                    <fullName>Service Functionality and Other Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Milestone_Take_Over__c</fullName>
        <label>Milestone Take Over</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flexbenefit</fullName>
                </value>
                <value>
                    <fullName>Ticket Restaurant</fullName>
                </value>
                <value>
                    <fullName>Ticket Restaurant Smart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <columns>ER_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Entitlements</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>